--- a/action.yml
+++ b/action.yml
@@ -3,6 +3,11 @@ name: Deploy React Application
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 # By default only runs on pushes on the master
+description: Build and deploy your React website via Github Pages  
+author: joshuanoronha
+branding: 
+  color: green
+  icon: code
 on:
   push:
     branches: [ master ] # You can add branches here
